--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,6 +41,7 @@ body {
 
     & .blog-review-card {
         width: 24rem;
+        height:36.625rem ;
         padding: 24px;
         border: 1px solid #000;
         border-radius: 20px;
@@ -118,7 +119,8 @@ body {
         & svg {
             width: 100%;
             border-radius: 10px;
-            height: auto;
+            height: 200px;
+            object-fit: cover;
         }
     }
 
